--- a/src/app/catagories-bar/catagories-bar.html
+++ b/src/app/catagories-bar/catagories-bar.html
@@ -1,6 +1,6 @@
 <div class="categoriesContainer">
     <div *ngFor="let category of Categories">
-        <a href="">
+        <a href="GoToCategory">
             <img src={{category.iconName}} alt="Mob&Tab">
             <h3>{{category.categoryName}}</h3>
         </a>
