--- a/src/app/header-bar/header-bar.html
+++ b/src/app/header-bar/header-bar.html
@@ -1,16 +1,20 @@
 <div class="headerContainer">
     <div class="logoContainer">
-        <img src="favicon.ico" alt="websiteLogo">
+        <img src="WebsiteLogo.png" alt="websiteLogo">
+        <!-- <h3>ShopKart</h3> -->
     </div>
     <div class="searchContainer">
         <span><img src="HeaderBar\loupe.png" alt="searchicon" class="searchIcon"></span>
         <input type="search" name="searchItem" id="search" placeholder="Search for Products, Brands and More">
     </div>
     <div class="profileServicesContiner">
-        <img src="HeaderBar\user.png" alt="profileImg">
-        <h4>Name Of the User</h4>
+        <a href="GoToProfle">
+            <img src="HeaderBar\user.png" alt="profileImg">
+            <h4>Name Of the User</h4>
+        </a>
         <a href="GoToCartPage">
             <img src="HeaderBar\cart.png" alt="CartIcon">
+            <label for="cart">Cart</label>
         </a>
     </div>
 </div>
