--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,5 @@
-<app-header-bar></app-header-bar>
-<app-home></app-home>
+<!-- <app-header></app-header> -->
+
+<router-outlet></router-outlet>
+
+<!-- <app-footer></app-footer> -->
