--- a/src/app/products/page-product-details/page-product-details.html
+++ b/src/app/products/page-product-details/page-product-details.html
@@ -1,1 +1,6 @@
-<p>page-product-details works!</p>
+<div class="container">
+    <p>page-product-details works! {{path}}</p>
+    <div class="">
+
+    </div>
+</div>
