Login And Signup Implemented

--- a/src/app/auth/page-login/page-login.html
+++ b/src/app/auth/page-login/page-login.html
@@ -4,7 +4,7 @@
 
         <form (ngSubmit)="OnLogInClicked(logInForm)" #logInForm="ngForm">
 
-            <input type="text" placeholder="Username" name="userName" ngModel required>
+            <input type="text" placeholder="Email" name="email" ngModel required>
 
             <input type="password" placeholder="Password" name="password" ngModel required>
 
